--- a/app/style/_player.scss
+++ b/app/style/_player.scss
@@ -1,19 +1,37 @@
 .player {
   display: flex;
+  align-items: center;
   position: relative;
+  height: 64px;
   list-style: none;
-  padding: 15px 10px;
+  padding: 0 10px;
   border-bottom: 1px solid #dadada;
   background: #fff;
+
+  &--adp-1 {
+    background: #E0F2F1;
+  }
+  &--adp-2 {
+    background: #B2DFDB;
+  }
+  &--adp-3 {
+    background: #80CBC4;
+  }
+
+  &--injured-que {
+    padding-left: 6px;
+    border-left: 4px solid #FFB300;
+  }
+
+  &--injured-out {
+    padding-left: 6px;
+    border-left: 4px solid #D32F2F;
+  }
 
   &__stacked {
     display: flex;
     flex-direction: column;
     padding-right: 20px;
-    &:first-child {
-      width: 100%;
-      max-width: 160px;
-    }
     &:last-child {
       padding-right: 0;
     }
@@ -22,11 +40,20 @@
     }
   }
 
+  &__name {
+    width: 100%;
+    max-width: 190px;
+  }
+
   &__menu-toggle {
-    display: flex;
-    justify-content: center;
-    margin-left: 10px;
-    padding-right: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: transparent;
+    outline: none;
   }
 
   &__menu {
@@ -37,16 +64,36 @@
     right: 0;
     top: 0;
     bottom: 0;
-    padding: 15px;
-    background: #fff;
-    &__buttons {
+    padding: 15px 10px;
+    background: #f2f2f2;
+    box-shadow: inset 0px 0px 8px -2px rgba(0,0,0,0.5);
+    &__name {
+      display: flex;
       margin-right: auto;
-      button {
-        margin-right: 10px;
-        &:last-child {
-          margin-right: 0;
-        }
-      }
+    }
+    &__buttons {
+      margin-right: 30px;
+    }
+  }
+  &__button {
+    background: #323232;
+    border: none;
+    border-radius: 3px;
+    padding: 5px 10px;
+    color: #fff;
+    font-weight: 700;
+    margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
+    &--draft {
+      background: #00695c;
+    }
+    &--remove {
+      background: #7f0000;
+    }
+    &--close {
+      background: #263238;
     }
   }
 }
