improve caching and folder restructuring

--- a/style/_player.scss
+++ b/style/_player.scss
@@ -45,6 +45,13 @@
     max-width: 190px;
   }
 
+  &__name-field {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &__menu-toggle {
     position: absolute;
     left: 0;
@@ -67,12 +74,15 @@
     padding: 15px 10px;
     background: #f2f2f2;
     box-shadow: inset 0px 0px 8px -2px rgba(0,0,0,0.5);
+    &--injured {
+      padding-left: 6px;
+    }
     &__name {
       display: flex;
       margin-right: auto;
     }
     &__buttons {
-      margin-right: 30px;
+      margin-right: 10px;
     }
   }
   &__button {
