--- a/style/_splash.scss
+++ b/style/_splash.scss
@@ -23,6 +23,7 @@
       border: 1px solid #e2e2e2;
       border-radius: 3px;
       margin-right: 10px;
+      font-size: 16px;
     }
     button {
       background: #323232;
