--- a/style/_app.scss
+++ b/style/_app.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
 
 * {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -13,8 +14,14 @@ body {
   margin: 0;
   font-size: 14px;
   line-height: 1.563;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background: #323232;
+}
+
+input {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 strong {
