--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,4 +1,4 @@
-$activeColour: #64FFDA;
+$activeColour: #64ffda;
 
 .btm-nav {
   display: flex;
@@ -24,7 +24,8 @@ $activeColour: #64FFDA;
     border: none;
     margin: 6px;
     position: relative;
-    &:before, &:after {
+    &:before,
+    &:after {
       content: "";
       position: absolute;
       left: 0;
@@ -36,11 +37,11 @@ $activeColour: #64FFDA;
       top: -6px;
     }
     &:after {
-      bottom: -6px
+      bottom: -6px;
     }
   }
 
-  &__btn-pos{
+  &__btn-pos {
     background: none;
     color: #fff;
     border: none;
@@ -52,6 +53,42 @@ $activeColour: #64FFDA;
     &--active {
       color: $activeColour;
       border-bottom: 2px solid $activeColour;
+    }
+  }
+
+  &__search-toggle {
+    background: white;
+    border: none;
+    border-radius: 3px;
+    padding: 4px;
+    margin-right: 15px;
+  }
+
+  &__search-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -50px;
+    height: 50px;
+    background: #323232;
+    border-bottom: 1px solid #6d6d6d;
+    padding: 2px 15px;
+    form {
+      display: flex;
+      height: 100%;
+      align-items: center;
+    }
+  }
+
+  &__search-input {
+    background: transparent;
+    color: white;
+    border: none;
+    width: 100%;
+    height: 34px;
+    padding: 0 10px;
+    &::placeholder {
+      color: rgb(196, 196, 196);
     }
   }
 }
