--- a/style/_player.scss
+++ b/style/_player.scss
@@ -67,6 +67,7 @@
     display: flex;
     align-items: center;
     position: absolute;
+    z-index: 999;
     left: 0;
     right: 0;
     top: 0;
@@ -104,6 +105,26 @@
     }
     &--close {
       background: #263238;
+    }
+    &--favourite {
+      border: none;
+      padding: 5px;
+      position: relative;
+      z-index: 99;
+      background: none;
+      svg {
+        pointer-events: none;
+      }
+      path {
+        stroke: #323232;
+        stroke-width: 1px;
+        fill: transparent;
+      }
+      &--active {
+        path {
+          fill: rgb(247, 227, 0);
+        }
+      }
     }
   }
 }
